[package]
name = "nougat"
version = "0.1.0"
authors = ["Morley, Jonathan <morley.jonathan@gmail.com>"]
description = "Nuget Repository client"
documentation = "https://jonathanmorley.github.io/nougat"
repository = "https://github.com/jonathanmorley/nougat"

[dependencies]
clap = "2"
hyper = "0.10"
log = "0.4"
reqwest = "0.9"
serde = "1"
serde_derive = "1"
tempdir = "0.3"
# So that xml deserialization supports bools
serde-xml-rs = { git = "https://github.com/RReverser/serde-xml-rs" }
failure = "0.1"
structopt = "0.2"
stderrlog = "0.4"

# So that deserialization supports Urls
[dependencies.url]
git = "https://github.com/dtolnay/url"
branch = "serde"
features = [ "serde1" ]
